@@ -284,6 +284,7 @@ Changes:
 - Added README.de.linux 
 - Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 32)
 - Added shell-script dvd-chapter-mkv.sh 
+- Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 64)
 
 Fixes:
 
@@ -303,7 +304,7 @@ Fixes:
 - Fixed ugly bug inside dvd-chapter.sh 
   (there was no device for dvd on some calls to lsdvd)
   Thanks to fabrice.peiffer@convar.com
-- Fixed issue 22 with loging asci-code inside log.
+- Fixed issue 22 with loging non asci-code inside log.
 
 
 
